# HydraulicToolbox

HydraulicToolbox/: Analyzer.cpp  Analyzer.h  Analyzer_UnitTests.cpp  CMakeLists.txt  Channel.h  Flow.h  Flow_UnitTests.cpp  ProjectDataStructures.h  RectangularChannel.cpp  RectangularChannel.h  RectangularChannel_UnitTests.cpp  TrapezoidalChannel.cpp  TrapezoidalChannel.h  TrapezoidalChannel_UnitTests.cpp  TriangularChannel.cpp  TriangularChannel.h  UnitSystemConstants.h  main.cpp
HydraulicToolbox/backend/: Analyzer.cpp  Analyzer.h  Channel.cpp  Channel.h  Flow.cpp  HydraulicCalculator.cpp  HydraulicCalculator.h  RectangularChannel.cpp  RectangularChannel.h
HydraulicToolbox/tests/: Analyzer_UnitTests.cpp  TriangularChannel_UnitTests.cpp
HydraulicToolbox/ui/: AnalysisResultsWidget.cpp  AnalysisResultsWidget.h  ExportWidget.cpp  ExportWidget.h  GeometryDefinitionWidget.cpp  GeometryDefinitionWidget.h  HydraulicParametersWidget.cpp  HydraulicParametersWidget.h  VtkWidget.cpp  VtkWidget.h  WorkflowController.cpp  WorkflowController.h  WorkflowTabBar.h  mainwindow.cpp  mainwindow.h
HydraulicToolbox/ui/controls/: VtkWidget.h  WorkflowController.cpp  WorkflowController.h  WorkflowTabBar.cpp
HydraulicToolbox/ui/panels/: ParameterPanel.cpp  ParameterPanel.h  VisualizationPanel.cpp  VisualizationPanel.h
HydraulicToolbox/ui/visualization/: VtkWidget.cpp  VtkWidget.h
HydraulicToolbox/ui/visualization/animation/: ParticleSystem.cpp  ParticleSystem.h  WaterFlowAnimator.cpp  WaterFlowAnimator.h
HydraulicToolbox/ui/visualization/renderers/: ChannelRenderer.cpp  ChannelRenderer.h  RectangularChannelRenderer.cpp  RectangularChannelRenderer.h  TrapezoidalChannelRenderer.cpp  TrapezoidalChannelRenderer.h  TriangularChannelRenderer.cpp  TriangularChannelRenderer.h
HydraulicToolbox/ui/widgets/: GeometryDefinitionWidget.cpp  GeometryDefinitionWidget.h  HydraulicParametersWidget.cpp  HydraulicParametersWidget.h  InputSummaryWidget.cpp  InputSummaryWidget.h  ProjectSetupWidget.cpp  ProjectSetupWidget.h
